WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45832
REGRESSION (
r53857
): AREA tag with tabindex="-1" displays focus ring after multiple mouse clicks.
https://bugs.webkit.org/show_bug.cgi?id=45832
Summary
REGRESSION (r53857): AREA tag with tabindex="-1" displays focus ring after mu...
chris fleizach
Reported
2010-09-15 13:49:35 PDT
AREA tag with tabindex="-1" displays focus ring after multiple mouse clicks. Should not allow focus.
rdar://8143696
Attachments
patch
(7.44 KB, patch)
2010-09-15 13:53 PDT
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-09-15 13:49:56 PDT
Keyboard focus behavior is correct. User cannot focus AREA by tabbing, due to the negative tabindex.
chris fleizach
Comment 2
2010-09-15 13:53:39 PDT
Created
attachment 67708
[details]
patch
chris fleizach
Comment 3
2010-10-06 15:09:37 PDT
http://trac.webkit.org/changeset/69237
WebKit Review Bot
Comment 4
2010-10-06 16:54:31 PDT
http://trac.webkit.org/changeset/69237
might have broken Chromium Win Release
WebKit Review Bot
Comment 5
2010-10-06 16:55:03 PDT
http://trac.webkit.org/changeset/69242
might have broken Chromium Win Release
Andy Estes
Comment 6
2011-04-02 16:51:10 PDT
This change doesn't sound right to me. Setting tabindex to -1 means that the element shouldn't be focused during sequential navigation, but it is still allowed to be focused by the mouse [1]. If the area element has a non-zero outline-width and is clicked, I think a focus ring should be drawn. Am I missing something? [1]
http://www.whatwg.org/specs/web-apps/current-work/multipage/editing.html#sequential-focus-navigation-and-the-tabindex-attribute
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug