REGRESSION (r53857): AREA tag with tabindex="-1" displays focus ring after multiple mouse clicks. https://bugs.webkit.org/show_bug.cgi?id=45832

Reviewed by Beth Dakin.

WebCore:

Test: fast/events/mouse-focus-imagemap.html

* html/HTMLAreaElement.cpp:
(WebCore::HTMLAreaElement::isKeyboardFocusable):
(WebCore::HTMLAreaElement::isMouseFocusable):
(WebCore::HTMLAreaElement::isFocusable):
(WebCore::HTMLAreaElement::updateFocusAppearance):
* html/HTMLAreaElement.h:

LayoutTests:

* fast/events/mouse-focus-imagemap-expected.txt: Added.
* fast/events/mouse-focus-imagemap.html: Added.
* fast/events/resources/tabindex-focus-blur-all.js:
(testProgrammaticFocus):
* fast/events/tabindex-focus-blur-all-expected.txt:
    Update test to reflect that AREA with tabindex=-1 should not be focusable.



Canonical link: https://commits.webkit.org/59840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69237 268f45cc-cd09-0410-ab3c-d52691b4dbfc